--- a/javascript-exercises/functions_js.html
+++ b/javascript-exercises/functions_js.html
@@ -5,6 +5,6 @@
     <title>Function Exercises</title>
 </head>
 <body>
-<script src="./js/functions.js"></script>
+<script src="../javascript-with-html/js/functions.js"></script>
 </body>
 </html>
