--- a/objects/objects.html
+++ b/objects/objects.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <script src="./javascript/objects-lesson.js"></script>
+<script src="./javascript/objects.js"></script>
 </body>
 </html>
