Re-organizing web-exercises repository.

--- a/external_js.html
+++ b/external_js.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>External JS Example</title>
 </head>
 <body>
-
-<script src="./javascript/planets-string.js"></script>
+<script src="JS/external.js"></script>
 </body>
 </html>
