--- a/objects.html
+++ b/objects.html
@@ -5,8 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
-
-<script src="./javascript/conditionals-lesson.js"></script>
+<script src="objects/javascript/objects-lesson.js"></script>
+<script src="JS/objects.js"></script>
 </body>
 </html>
