--- a/planets-js.html
+++ b/planets-js.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>External JS Example</title>
+    <title>Title</title>
 </head>
 <body>
-<script src="./js/external-js.js"></script>
+<script src="./JS/planets-arrays.js"></script>
 </body>
 </html>
