--- a/split-join.html
+++ b/split-join.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script src="./javascript/objects-lesson.js"></script>
-<script src="./javascript/objects.js"></script>
+
+<script src="JS/planets-string.js"></script>
 </body>
 </html>
