--- a/conditionals.html
+++ b/conditionals.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
-<script src="./javascript/planets-string.js"></script>
+<script src="JS/conditionals.js"></script>
 </body>
 </html>
+
