--- a/loops.html
+++ b/loops.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>Loops Exercise</h1>
-<script src="./Javascript/for_loops.js"></script>
-<script src="./Javascript/break_and_continue.js"></script>
-<script src="./Javascript/while.js"></script>
+<script src="JS/for_loops.js"></script>
+<script src="JS/break_and_continue.js"></script>
+<script src="JS/while.js"></script>
 </body>
 </html>
