--- a/objects.html
+++ b/objects.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <script src="objects/javascript/objects-lesson.js"></script>
-<script src="JS/objects.js"></script>
+<script src="js/objects.js"></script>
 </body>
 </html>
