--- a/github.html
+++ b/github.html
@@ -3,108 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <title>Github HTML page</title>
+  <link rel="stylesheet" href="./css/github.css">
 </head>
 <body>
-<img src="http://placeholder.pics/svg/40x40/FFFF8B-FF1849/FFFACD-7EFFAC" alt="sum bullshit">
-<ul>
-  <li><a href="">Pull requests</a></li>
-  <li><a href="">Issues</a></li>
-  <li><a href="">Marketplace</a></li>
-  <li><a href="">Explore</a></li>
-</ul>
-<h2>Codeup</h2>
-<img src="http://placeholder.pics/svg/40x40/FFFF8B-FF1849/FFFACD-7EFFAC" alt="sum bullshit">
+<div class="page-wrapper">
+<header class="container header-container">
+  <div class="row">
+    <div class="column">
+    <img  src="./images/github-mark/github-mark-white.png" width ="40px" alt="a logo">
+      </div>
+      <div class="column">
+    <ul>
+      <li><a href="">Pull requests</a></li>
+      <li><a href="">Issues</a></li>
+      <li><a href="">Marketplace</a></li>
+      <li><a href="">Explore</a></li>
+    </ul>
+    </div>
+  </div>
+</header>
+<div class="container">
+  <div class="row">
+    <div class="column">
+      <h2>Codeup</h2>
+      <img src="http://placeholder.pics/svg/40x40/FFFF8B-FF1849/FFFACD-7EFFAC" width="40px" alt="sum bullshit">
+    </div>
+  </div>
+  <div class="row">
+    <div class="column">
+      <ul>
+        <li><a href="">Repos</a> 39</li>
+        <li><a href="">People</a> 39</li>
+        <li><a href="">Teams</a> 39</li>
+        <li><a href="">Projects</a> 39</li>
+        <li><a href="">Settings</a> 39</li>
+      </ul>
+    </div>
+  </div>
+</div>
 
-<ul>
-  <li><a href="">Repos</a> 39</li>
-  <li><a href="">People</a> 39</li>
-  <li><a href="">Teams</a> 39</li>
-  <li><a href="">Projects</a> 39</li>
-  <li><a href="">Settings</a> 39</li>
-</ul>
+<div class="container">
+  <div class="row">
+    <div class="column">
+      <h3>Codeup's dev team</h3>
+    </div>
+  </div>
+</div>
+ <div class="container">
+   <div class="row">
+     <div class="column">
+       <table>
+         <tr>
+           <td><img src="https://fer-uig.glitch.me?uuid=12" alt="user-icon" /></td>
+           <td><a href="">Kent Beck</a></td>
+         </tr>
+         <tr>
+           <td>Kent Beck</td>
+         </tr>
+         <tr>
+           <td>Member</td>
+         </tr>
+         <tr>
+           <td>X Team Members</td>
+         </tr>
+         <tr>
+         <tr>
+           <td><img src="https://fer-uig.glitch.me?uuid=6" alt="user-icon" /></td>
+           <td><a href="">Codeup Staff</a></td>
+         </tr>
+         <tr>
+           <td>Codeup Staff</td>
+         </tr>
+         <tr>
+           <td>Member</td>
+         </tr>
+         <tr>
+           <td>X Team Members</td>
+         </tr>
+         <tr>
+           <td><img src="https://fer-uig.glitch.me?uuid=69" alt="user-icon" /></td>
+           <td><a href="">Martin F</a></td>
+         </tr>
+         <tr>
+           <td>MartinF</td>
+         </tr>
+         <tr>
+           <td>Member</td>
+         </tr>
+         <tr>
+           <td>X Team Members</td>
+         </tr>
 
+       </table>
+       </div>
+     </div>
+ </div>
 
+<div class="container">
+  <div class="row">
+    <div class="column">
+      <p>
+        ©2018 Github. Inc.
+        <a href="">Terms</a>
+        <a href="">Privacy</a>
+        <a href="">Security</a>
+        <a href="">Status</a>
+        <a href="">Help</a>
+      </p>
+      </div>
+  </div>
+  <div class="row">
+      <div class="column">
+       <p>
+        <a href="">Contact</a>
+        <a href="">API</a>
+        <a href="">Training</a>
+       </p>
+        </div>
+  </div>
 
+</div>
 
-<table>
-  <tr>
-    <th>Codeup's dev team</th>
-  </tr>
-  <tr>
-    <td><img src="https://fer-uig.glitch.me?uuid=12" alt="user-icon" /></td>
-    <td><a href="">Kent Beck</a></td>
-  </tr>
-  <tr>
-    <td>Kent Beck</td>
-  </tr>
-  <tr>
-    <td>Member</td>
-  </tr>
-  <tr>
-    <td>X Team Members</td>
-  </tr>
-  <tr>
-  <tr>
-    <td><img src="https://fer-uig.glitch.me?uuid=6" alt="user-icon" /></td>
-    <td><a href="">Codeup Staff</a></td>
-  </tr>
-  <tr>
-    <td>Codeup Staff</td>
-  </tr>
-  <tr>
-    <td>Member</td>
-  </tr>
-  <tr>
-    <td>X Team Members</td>
-  </tr>
-  <tr>
-    <td><img src="https://fer-uig.glitch.me?uuid=69" alt="user-icon" /></td>
-    <td><a href="">Martin F</a></td>
-  </tr>
-  <tr>
-    <td>MartinF</td>
-  </tr>
-  <tr>
-    <td>Member</td>
-  </tr>
-  <tr>
-    <td>X Team Members</td>
-  </tr>
-<tr>
-  <td>©2018 Github. Inc.</td>
-</tr>
-
-
-
-
-</table>
-
-<p>
-  <a href="">Terms</a>
-  <a href="">Privacy</a>
-  <a href="">Security</a>
-  <a href="">Status</a>
-  <a href="">Help</a>
-</p>
-
-<p>
-  <a href="">Contact</a>
-  <a href="">API</a>
-  <a href="">Training</a>
-</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 
 </body>
 </html>
