--- a/welcome.html
+++ b/welcome.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML Lesson</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <a id="top"></a>
-  <h1>Welcome to Veridian Dynamics!</h1>
+  <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
     <p>At Veridian Dynamics <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong></p>
 <hr>
 
@@ -32,11 +33,11 @@
 </ul>
 <hr>
 <h2>Company Vision</h2>
-<img src="./images/camel1.jpg" alt="picture of camel" height="400px" width="450px">
-  <img src="./images/camel2.jpg" alt="picture of camel" height="400px" width="450px">
+<img class="pics" src="./images/camel1.jpg" alt="picture of camel" height="400px" width="450px">
+  <img class="pics" src="./images/camel2.jpg" alt="picture of camel" height="400px" width="450px">
 <br>
-  <img src="./images/camel3.jpg" alt="picture of camel" height="400px" width="450px">
-  <img src="./images/camel4.jpg" alt="picture of camel" height="400px" width="450px">
+  <img class="pics" src="./images/camel3.jpg" alt="picture of camel" height="400px" width="450px">
+  <img class="pics" src="./images/camel4.jpg" alt="picture of camel" height="400px" width="450px">
 
   <h2>Our Product</h2>
 
