--- a/welcome.html
+++ b/welcome.html
@@ -4,33 +4,45 @@
     <meta charset="UTF-8">
     <title>HTML Lesson</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap'); </style>
 </head>
+
 <body>
+<main>
 <a id="top"></a>
   <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
-    <p>At Veridian Dynamics <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong></p>
+    <p class="fancy-header  ">At Veridian Dynamics <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong></p>
 <hr>
-
+<div class="container1">
+    <div class="row">
+        <div class="column1">
 <h2>Our Core Values</h2>
 <ul>
     <li>Camels</li>
     <li>Competence</li>
     <li>Technology</li>
 </ul>
-
+        </div>
+        <div class="column2">
 <h2>Our Process</h2>
 <ol>
     <li>Plan</li>
     <li>Evaluate</li>
     <li>Camels</li>
 </ol>
-
+</div>
+        <div class="column3">
 <h2>2022 Vision</h2>
 <ul>
     <li>Become #1 in technology</li>
     <li>Increase success by 20%</li>
     <li>Increase Camels by 30%</li>
 </ul>
+            </div>
+    </div>
+</div>
 <hr>
 <h2>Company Vision</h2>
 <img class="pics" src="./images/camel1.jpg" alt="picture of camel" height="400px" width="450px">
@@ -68,6 +80,7 @@
 <p><em>All products come with our quality guarantee</em></p>
 <br>
 <p><a href="#top">Go back to top of page</a></p>
-
+</main>
 </body>
+
 </html>
