--- a/welcome.html
+++ b/welcome.html
@@ -11,10 +11,11 @@
 
 <body>
 <main>
+    <div class="fancy-header">
 <a id="top"></a>
   <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
     <p class="fancy-header  ">At Veridian Dynamics <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong></p>
-<hr>
+    </div>
 <div class="container1">
     <div class="row">
         <div class="column1">
