--- a/planets-js.html
+++ b/planets-js.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="js/planets-arrays.js"></script>
+<script src="js/planets-array.js"></script>
 </body>
 </html>
