--- a/objects.html
+++ b/objects.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script src="objects/javascript/objects-lesson.js"></script>
+<!--<script src="objects/javascript/objects-lesson.js"></script>-->
 <script src="js/objects.js"></script>
 </body>
 </html>
