--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -4,35 +4,24 @@
     <meta charset="UTF-8">
     <title>Flexbox Nav</title>
   <link rel="stylesheet" href="./css/flexbox-nav-exercise.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
+  <style> @import url('https://fonts.googleapis.com/css2?family=Slackey&display=swap'); </style>
 </head>
 <body>
-<div class="container">
+<div class="hero">
   <nav class="navbar left-navbar">
+    <h2 class="logo">John <span>Doe</span></h2>
     <ul class="list left-side">
-      <li class="list-item"><a href="#"><strong>Articles</strong></a></li>
-      <li class="list-item"><a href="#"><strong>Products</strong></a></li>
-      <li class="list-item"><a href="#"><strong>Market</strong></a></li>
-      <li class="list-item"><a href="#"><strong>Jobs</strong></a></li>
+      <li class="list-item"><a href="#"><strong>Home</strong></a></li>
+      <li class="list-item"><a href="#"><strong>About</strong></a></li>
+      <li class="list-item"><a href="#"><strong>Services</strong></a></li>
+      <li class="list-item"><a href="#"><strong>Portfolio</strong></a></li>
+      <li class="list-item"><a href="#"><strong>Contact Me</strong></a></li>
     </ul>
+    <button type="button">Subscribe</button>
   </nav>
 
-  <h2>Logo</h2>
-
-  <nav class="navbar right-navbar">
-    <ul class="list right-side">
-      <li class="list-item"><a href="#"><strong>Follow us</strong></a></li>
-      <li class="list-item image"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-      </svg></a></li>
-      <li class="list-item image"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
-        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-      </svg></a></li>
-      <li class="list-item image"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-      </svg></a></li>
-    </ul>
-  </nav>
 
 
 
