--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 <div class="hero">
+  <div class="logo">Logo</div>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()"></a>
+  <i class="fa fa-bars"></i>
   <nav class="navbar left-navbar">
     <h2 class="logo">John <span>Doe</span></h2>
     <ul class="list left-side">
