--- a/order-pizza.html
+++ b/order-pizza.html
@@ -11,7 +11,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="d-inline-flex p-2 align-items-center">
-        <a class="navbar-brand" href="#">Willie's Pizza World</a>
+        <a class="navbar-brand" href="#"><img src="./images/5627012_delivery_fastfood_food_italian_pizza_icon%20(1).png" width="34px" height="26px">Willie's Pizza World</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
