--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div id="div">
-    <h1 id="h1">I am an h1</h1>
+    <h1 id="h1" class="h1-class">I am an h1</h1>
 
-    <p class="para">I am a paragraph</p>
+    <p class="para item">I am a paragraph</p>
 
     <ul class="ul">
         <li class="list-item">I am a list item</li>
@@ -36,6 +36,9 @@
     console.log(liColor);
     let liSize = $("li").css({"font-size": "20px"});
     console.log(liSize)
+
+    let h1Class = $(".h1-class").html();
+    alert(h1Class)
 
 
 </script>
