--- a/javascript_archive.html
+++ b/javascript_archive.html
@@ -8,4 +8,13 @@
 
 </body>
 <script src="./js/javascript_archive.js"></script>
+<script src="./js/jquery-3.6.3.js"></script>
+<script>
+
+ $.ajax('https://pokeapi.co/api/v2/pokemon/bewear').done(function(data) {
+        console.log(data.forms);
+    })
+
+
+</script>
 </html>
