--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -6,8 +6,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-<div class="d-flex">
-<button id="btn" class="d-flex justify-content-center">Show Answers</button>
+<div class="page-wrapper">
+<div class="btn-box">
+<button id="btn">Show Answers</button>
 </div>
 <p>10 FAQ about National Parks:</p>
 <dl>
@@ -51,12 +52,66 @@
   <dd class="invisible">A:
     Vehicles, and vehicle combinations, longer than 21 feet (including bumpers) or wider than 8 feet (including mirrors) are prohibited between Avalanche Campground and the Sun Point parking area. You may however, drive to Avalanche if traveling east, and to Sun Point, if traveling west. Vehicles over 10 feet in height may have difficulty driving west from Logan Pass due to rock overhangs. Stock trucks and trailers may access Packers Roost and Siyeh Bend.</dd>
 </dl>
+  <div class="btn-box">
+<button id="newBtn">Click Me</button>
+    </div>
+<h3>State Parks of Texas</h3>
+<ul id="state-parks-texas">
+  <li>Abilene</li>
+  <li>Big Bend</li>
+  <li>Choke Canyon</li>
+  <li>Davis Mountains</li>
+  <li>Enchanted Rock</li>
+</ul>
+<h3>Badlands</h3>
+<ul id="state-parks-texas">
+  <li>Abilene</li>
+  <li>Big Bend</li>
+  <li>Choke Canyon</li>
+  <li>Davis Mountains</li>
+  <li>Enchanted Rock</li>
+</ul>
+<h3>Everglades</h3>
+<ul id="state-parks-texas">
+  <li>Abilene</li>
+  <li>Big Bend</li>
+  <li>Choke Canyon</li>
+  <li>Davis Mountains</li>
+  <li>Enchanted Rock</li>
+</ul>
 
 
 <style>
+  .page-wrapper {
+    width: 80%;
+    margin: 0 auto;
+    background-color: #8d8d8d;
+  }
+
+  .lastUl {
+    background-color: #FF0;
+  }
+
+  .btn-box {
+    display: flex;
+    justify-content: center;
+
+  }
 
   #btn {
-    ;
+
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+
+  #newBtn {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
@@ -69,16 +124,29 @@
   }
   .invisible {
     visibility: hidden;
+    font-size: 1px;
   }
 
   .highlighted {
     background-color: #FF0;
     visibility: visible;
   }
+
+  .boldened {
+    font-weight: bold;
+  }
+
+  .blue {
+    color: blue;
+  }
 </style>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script>
+  "use strict";
+  $(document).ready(function (){
+
+
 $("#btn").click(function(){
   $("dd").toggleClass("invisible");
 });
@@ -89,6 +157,22 @@ $(document).ready(function() {
   });
 });
 
+$("#newBtn").click(function(){
+  $("ul").each(function(index) {
+      $(this).children().last().toggleClass("lastUl");
+  });
+});
+
+$("h3").click(function() {
+  $(this).next().children().toggleClass("boldened");
+})
+
+$("li").click(function() {
+  $(this).parent().children().first().toggleClass("blue");
+})
+  });
+
 </script>
+</div>
 </body>
 </html>
