--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -3,8 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
+<div class="page-wrapper">
+<div class="header">
+    <h2>Blog Name</h2>
+</div>
+<div class="card">
+    <h2>TITLE HEADING</h2>
+    <h5>Title description, Dec 7, 2017</h5>
+    <div class="fakeimg" style="height:200px;">Image</div>
+    <p>Some text..</p>
+</div>
 
+
+<script src="./js/jquery-3.6.3.js"></script>
+<script>
+
+
+
+
+    $(document).ready(function () {
+        "use strict";
+
+        $.ajax('./data/blog.json').done(function (data) {
+            // console.log(data);
+
+            let html = '';
+
+            for (let i = 0; i < data.length; i += 1) {
+                html += `<div class="card">
+    <h2>${data[i].title}</h2>
+    <h5>${data[i].date}</h5>
+    <p>${data[i].categories[i]}</p>
+    <div class="fakeimg" style="height:200px;">Image</div>
+    <p>${data[i].content}</p>
+    `;
+            }
+            $('.header').html(html);
+
+                    });
+
+            });
+</script>
+</div>
 </body>
 </html>
