--- a/ajax-store.html
+++ b/ajax-store.html
@@ -17,8 +17,9 @@
 </head>
 <body>
 <div class="page-wrapper container d-flex justify-content-center">
-    <div class="row d-flex justify-content-center">
-        <div class="">
+    <div class="row">
+        <div class="column justify-content-center">
+        <div class="justify-content-center">
             <h1>Current Orders</h1>
         </div>
 
@@ -67,6 +68,7 @@
 
             });
         </script>
+        </div>
     </div>
 </div>
 </body>
