--- a/weather_map.html
+++ b/weather_map.html
@@ -23,28 +23,15 @@
   <nav class="container">
     <div class="row align-items-center py-2">
       <div class="input-group col-sm">
-        <span class="input-group-text" id="basic-addon1">City:</span>
+        <span class="input-group-text" id="search-bar">Search:</span>
         <input
-                type="text"
+                type="search"
                 class="form-control"
                 inputmode="numeric"
-                id="latitude"
-                placeholder=""
-                aria-label="latitude"
-                aria-describedby="basic-addon1"
-
-        />
-      </div>
-      <div class="input-group col-sm">
-        <span class="input-group-text" id="basic-addon2">State:</span>
-        <input
-                type="text"
-                class="form-control"
-                inputmode="numeric"
-                id="longitude"
-                placeholder=""
-                aria-label="longitude"
-                aria-describedby="basic-addon2"
+                id="search-city"
+                placeholder="city, state"
+                aria-label="search-city"
+                aria-describedby="search-bar"
 
         />
       </div>
